[package]
name = "cf_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1"
thiserror = "1"
serde = { version= "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version="1.0", features = [ "v4" ] }
chrono = { version  = "0.4", features = ["serde"] }
glob = "0.3"
dirs = "4.0.0"